--- a/content/6_Thao_luan_mo_rong.tex
+++ b/content/6_Thao_luan_mo_rong.tex
@@ -1,5 +1,5 @@
 \section{Thảo luận}
-Qua việc tim hiểu và phân tích mô hình hôi quy tuyến tính bằng ngôn ngữ R, dựa trên những cơ sở lý thuyết đã học và tìm hiểu thêm nhóm chúng tôi đã biết thêm về các phương thức xử lý các số liệu gốc và mô hình hóa nó để phục vụ mục đích tim hiểu và phân tích dữ liệu. Từ đó có thể áp dụng thực hiện đối với các dữ liệu trong thực tế. Tuy nhiên qua việc làm việc với mô hình hôi quy chúng tôi rút ra nhận xét mô hình hồi quy tuyến tính có những ưu điểm và khuyết điểm sau:
+Qua việc tìm hiểu và phân tích mô hình hôi quy tuyến tính bằng ngôn ngữ R, dựa trên những cơ sở lý thuyết đã học và tìm hiểu thêm, chúng ta đã biết thêm về các phương thức xử lý các số liệu gốc và mô hình hóa nó để phục vụ mục đích tim hiểu và phân tích dữ liệu. Từ đó có thể áp dụng thực hiện đối với các dữ liệu trong thực tế. Tuy nhiên qua việc làm việc với mô hình hôi quy chúng ta rút ra nhận xét mô hình hồi quy tuyến tính có những ưu điểm và khuyết điểm sau:
 
 Ưu điểm:
 \begin{itemize}
