--- a/content/4_Thong_ke_mo_ta.tex
+++ b/content/4_Thong_ke_mo_ta.tex
@@ -5,7 +5,11 @@
     \centering
     \includegraphics[width=0.8\linewidth]{graphics/bảng thống kê mẫu.jpg}
     \caption{Bảng thống kê mẫu}
+    \label{34}
 \end{figure}
+\textbf{Nhận xét:} Từ bảng thống kê hình \ref{34} 
+chúng ta có những cái nhìn tổng quan về dữ liệu như: số lượng quan sát \textbf{n}, trung bình mẫu \textbf{mean}, trung vị \textbf{median}, độ lệch chuẩn \textbf{sd}, khoảng biến thiên \textbf{range}, sai số chuẩn \textbf{se}, độ lệch \textbf{skew}, đánh giá độ nhọn \textbf{kurtosis}
+
 
 \subsection{Phân tích biến liên tục bằng biểu đồ.}
 \subsubsection{Đồ thị Histogram}
