--- a/content/7_Nguon_du_lieu_nguon_code.tex
+++ b/content/7_Nguon_du_lieu_nguon_code.tex
@@ -1,4 +1,4 @@
-\pagebreak
+% \pagebreak
 \section{Nguồn dữ liệu và nguồn code}
 Nguồn dữ liệu (dirty\_data.csv): \href{https://www.kaggle.com/datasets/muhammadshahrayar/transactional-retail-dataset-of-electronics-store?select=dirty_data.csv}{DATA}
 
