--- a/content/3_Tien_xu_ly_so_lieu.tex
+++ b/content/3_Tien_xu_ly_so_lieu.tex
@@ -30,7 +30,7 @@ Sau khi quan sát hình \ref{fig:3.2}, ta nhận thấy biến \textbf{date} đa
     \label{fig:3.4}
 \end{figure}
 
-Ngoài ra, ta có thể dễ dàng thiết lập được công thức cho mối liên hệ giữa biến \textbf{order\_total} với các biến \textbf{order\_price}, \textbf{delivery\_charges} và \textbf{coupon\_discount}. Tương tự, ta cũng có công thức để tính khoảng cách từ khách hàng đến 3 kho hàng khác nhau, từ đó xác định được giá trị của \textbf{nearest\_warehouse} dựa vào kho hàng có khoảng cách ngắn nhất. Các biến này sẽ được tính toán lại bằng công thức để đối chiếu với giá trị thực tế.
+% Ngoài ra, ta có thể dễ dàng thiết lập được công thức cho mối liên hệ giữa biến \textbf{order\_total} với các biến \textbf{order\_price}, \textbf{delivery\_charges} và \textbf{coupon\_discount}. Tương tự, ta cũng có công thức để tính khoảng cách từ khách hàng đến 3 kho hàng khác nhau, từ đó xác định được giá trị của \textbf{nearest\_warehouse} dựa vào kho hàng có khoảng cách ngắn nhất. Các biến này sẽ được tính toán lại bằng công thức để đối chiếu với giá trị thực tế.
 \subsubsection{Điều chỉnh định dạng của biến date}
 Chúng ta sẽ thực hiện việc chuẩn hóa và chuyển đổi biến \textbf{date} thành định dạng \textbf{``Date''} từ dữ liệu ban đầu để đảm bảo tính nhất quán trong phân tích. Thư viện \textbf{lubridate} sẽ được sử dụng vì nó cung cấp cho ta hàm \textbf{parse\_date\_time()} giúp phân tích và chuyển đổi các giá trị trong \textbf{dirty\_data\$date} về dạng thống nhất, dựa trên các mẫu định dạng được chỉ định trong \textbf{orders = c(``ymd", ``dmy", ``mdy")}. Sau đó, sử dụng hàm \textbf{as.Date()} để đưa giá trị về định dạng \textbf{``Date''}. Kết quả cho 10 giá trị đầu tiên có được biểu diễn trong hình \ref{f2}
 \begin{figure}[!htbp]
@@ -58,28 +58,28 @@ Ta tiến hành việc chuẩn hóa dữ liệu trong biến nearest\_warehouse 
     \label{f4}
 \end{figure}
 
-\subsubsection{Kiểm tra giá trị trong biến order\_total}
-Ta sẽ tiến hành thực hiện các bước để tính toán lại tổng chi phí (\textbf{order\_total}) của các đơn hàng dựa trên các yếu tố liên quan (\textbf{order\_price}, \textbf{delivery\_charges}, \textbf{coupon\_discount}) và kiểm tra xem có sự khác biệt nào so với dữ liệu gốc hay không. Tổng chi phí đơn hàng được tính theo công thức \textbf{calculated\_order\_total} = \textbf{order\_price} \times (1 - \textbf{coupon\_discount}/100) + \textbf{delivery\_charges}. Công thức này áp dụng giảm giá (dựa trên phần trăm \textbf{coupon\_discount}) và cộng phí giao hàng (\textbf{delivery\_charges}) để tính tổng chi phí thực tế. Việc tính lại tổng chi phí đơn hàng là để kiểm tra giá trị của biến \textbf{order\_total} có sự sai lệch giữa công thức toán học và dữ liệu có từ thực tế hay không. Hình \ref{f5} biểu diễn một vài giá trị ban đầu của dữ liệu bị sai và giá trị được tính toán chính xác từ công thức.
-\begin{figure}[!htbp]
-    \centering
-    \includegraphics[width=0.7\textwidth]{graphics/Pre_processing_data/f5.PNG}
-    \caption{Giá trị gốc bị lỗi của \textbf{order\_total}} được cập nhật bởi giá trị mới từ \textbf{calculated\_order\_total} 
-    \label{f5}
-\end{figure}
+% \subsubsection{Kiểm tra giá trị trong biến order\_total}
+% Ta sẽ tiến hành thực hiện các bước để tính toán lại tổng chi phí (\textbf{order\_total}) của các đơn hàng dựa trên các yếu tố liên quan (\textbf{order\_price}, \textbf{delivery\_charges}, \textbf{coupon\_discount}) và kiểm tra xem có sự khác biệt nào so với dữ liệu gốc hay không. Tổng chi phí đơn hàng được tính theo công thức \textbf{calculated\_order\_total} = \textbf{order\_price} \times (1 - \textbf{coupon\_discount}/100) + \textbf{delivery\_charges}. Công thức này áp dụng giảm giá (dựa trên phần trăm \textbf{coupon\_discount}) và cộng phí giao hàng (\textbf{delivery\_charges}) để tính tổng chi phí thực tế. Việc tính lại tổng chi phí đơn hàng là để kiểm tra giá trị của biến \textbf{order\_total} có sự sai lệch giữa công thức toán học và dữ liệu có từ thực tế hay không. Hình \ref{f5} biểu diễn một vài giá trị ban đầu của dữ liệu bị sai và giá trị được tính toán chính xác từ công thức.
+% \begin{figure}[!htbp]
+%     \centering
+%     \includegraphics[width=0.7\textwidth]{graphics/Pre_processing_data/f5.PNG}
+%     \caption{Giá trị gốc bị lỗi của \textbf{order\_total}} được cập nhật bởi giá trị mới từ \textbf{calculated\_order\_total} 
+%     \label{f5}
+% \end{figure}
 
-\subsubsection{Kiểm tra giá trị trong biến nearest\_warehouse}
-Ta sẽ sử dụng công thức Haversine (được trình bày trong phần \ref{Kien thuc nen}) để tính khoảng cách giữa hai điểm dựa trên tọa độ vĩ độ và kinh độ, sử dụng bán kính Trái Đất là 6371 km. Công thức được áp dụng để đo khoảng cách theo đường cong bề mặt Trái Đất, phù hợp cho dữ liệu địa lý. Hàm \textbf{haversine\_distance()} được thiết kế để tính khoảng cách từ khách hàng đến mỗi kho hàng, với đầu vào là tọa độ khách hàng và tọa độ nhà kho, hàm trả về khoảng cách giữa hai tọa độ trên. Sau khi hoàn tất việc tính khoảng cách từ một khách hàng bất kỳ đến cả 3 kho hàng, hàm \textbf{pmin()} được dùng để chọn ra kho hàng gần nhất và gán vào \textbf{distance\_to\_nearest\_warehouse\_fixed}. Hình \ref{f6} cho thấy một vài giá trị khoảng cách được tính lại có độ sai lệch bất thường so với giá trị gốc. Nếu quan sát kỹ, ta sẽ phát hiện giá trị \textbf{customer\_lat} tương ứng với những khoảng cách này xấp xỉ 37 trong khi hầu hết các giá trị cùng loại khác xấp xỉ -37. Điều này dẫn đến kết luận có sự sai sót (thiếu dấu âm) trong khâu nhập dữ liệu. Vì thế, ta quyết định sẽ thêm dấu âm cho các giá trị lỗi đã đề cập. Hình \ref{f7} liệt kê tất cả các giá trị của \textbf{nearest\_warehouse} bị lỗi được cập nhật lại, số lượng các giá trị lỗi này được giảm đáng kể, chứng tỏ kết luận trên là đúng đắn.
-\begin{figure}[!htbp]
-    \centering
-    \includegraphics[width=\textwidth]{graphics/Pre_processing_data/f6.PNG}
-    \caption{Một vài giá trị khoảng cách gốc và giá trị khoảng cách được tính lại}
-    \label{f6}
-\end{figure}
-\begin{figure}[!htbp]
-    \centering
-    \includegraphics[width=\textwidth]{graphics/Pre_processing_data/f7.PNG}
-    \caption{Các giá trị \textbf{nearest\_warehouse} lỗi được cập nhật}
-    \label{f7}
-\end{figure}
+% \subsubsection{Kiểm tra giá trị trong biến nearest\_warehouse}
+% Ta sẽ sử dụng công thức Haversine (được trình bày trong phần \ref{Kien thuc nen}) để tính khoảng cách giữa hai điểm dựa trên tọa độ vĩ độ và kinh độ, sử dụng bán kính Trái Đất là 6371 km. Công thức được áp dụng để đo khoảng cách theo đường cong bề mặt Trái Đất, phù hợp cho dữ liệu địa lý. Hàm \textbf{haversine\_distance()} được thiết kế để tính khoảng cách từ khách hàng đến mỗi kho hàng, với đầu vào là tọa độ khách hàng và tọa độ nhà kho, hàm trả về khoảng cách giữa hai tọa độ trên. Sau khi hoàn tất việc tính khoảng cách từ một khách hàng bất kỳ đến cả 3 kho hàng, hàm \textbf{pmin()} được dùng để chọn ra kho hàng gần nhất và gán vào \textbf{distance\_to\_nearest\_warehouse\_fixed}. Hình \ref{f6} cho thấy một vài giá trị khoảng cách được tính lại có độ sai lệch bất thường so với giá trị gốc. Nếu quan sát kỹ, ta sẽ phát hiện giá trị \textbf{customer\_lat} tương ứng với những khoảng cách này xấp xỉ 37 trong khi hầu hết các giá trị cùng loại khác xấp xỉ -37. Điều này dẫn đến kết luận có sự sai sót (thiếu dấu âm) trong khâu nhập dữ liệu. Vì thế, ta quyết định sẽ thêm dấu âm cho các giá trị lỗi đã đề cập. Hình \ref{f7} liệt kê tất cả các giá trị của \textbf{nearest\_warehouse} bị lỗi được cập nhật lại, số lượng các giá trị lỗi này được giảm đáng kể, chứng tỏ kết luận trên là đúng đắn.
+% \begin{figure}[!htbp]
+%     \centering
+%     \includegraphics[width=\textwidth]{graphics/Pre_processing_data/f6.PNG}
+%     \caption{Một vài giá trị khoảng cách gốc và giá trị khoảng cách được tính lại}
+%     \label{f6}
+% \end{figure}
+% \begin{figure}[!htbp]
+%     \centering
+%     \includegraphics[width=\textwidth]{graphics/Pre_processing_data/f7.PNG}
+%     \caption{Các giá trị \textbf{nearest\_warehouse} lỗi được cập nhật}
+%     \label{f7}
+% \end{figure}
 
-Như vậy, có sự sai lệch giữa giá trị được áp dụng công thức toán học và giá trị được đo đạc từ thực tế. Điều này có thể là do ảnh hưởng của các yếu tố ngẫu nhiên và chúng sẽ được phân tích ở các phần sau.
+% Như vậy, có sự sai lệch giữa giá trị được áp dụng công thức toán học và giá trị được đo đạc từ thực tế. Điều này có thể là do ảnh hưởng của các yếu tố ngẫu nhiên và chúng sẽ được phân tích ở các phần sau.
