--- a/content/6_Thao_luan_mo_rong.tex
+++ b/content/6_Thao_luan_mo_rong.tex
@@ -1,14 +1,2 @@
 \section{Thảo luận}
-Qua việc tìm hiểu và phân tích mô hình hôi quy tuyến tính bằng ngôn ngữ R, dựa trên những cơ sở lý thuyết đã học và tìm hiểu thêm, chúng ta đã biết thêm về các phương thức xử lý các số liệu gốc và mô hình hóa nó để phục vụ mục đích tim hiểu và phân tích dữ liệu. Từ đó có thể áp dụng thực hiện đối với các dữ liệu trong thực tế. Tuy nhiên qua việc làm việc với mô hình hôi quy chúng ta rút ra nhận xét mô hình hồi quy tuyến tính có những ưu điểm và khuyết điểm sau:
-
-Ưu điểm:
-\begin{itemize}
-    \item Nhanh chóng để mô hình hóa và đặc biệt hữu ích khi mối quan hệ được mô hình hóa không quá phức tạp và nếu bạn không có nhiều dữ liệu.
-    \item Hồi quy tuyến tính là đơn giản để hiểu
-\end{itemize}
-
-Khuyết điểm:
-\begin{itemize}
-    \item Nhạy cảm với dữ liệu nhiễu.
-    \item Không biểu diễn được những mô hình phức tạp
-\end{itemize}
+Dưới góc độ phân tích thống kê, mô hình ANOVA (Phân tích phương sai) và mô hình hồi quy tuyến tính đa bội đều được sử dụng để khám phá mối quan hệ giữa các biến độc lập và biến phụ thuộc. Tuy nhiên, chúng có những điểm khác biệt cơ bản về mục đích và cách thức áp dụng. ANOVA thường được sử dụng khi các biến độc lập là các biến phân loại (như các nhóm hoặc điều kiện khác nhau) nhằm so sánh sự khác biệt trung bình của biến phụ thuộc giữa các nhóm này. Trong khi đó, hồi quy tuyến tính đa bội cho phép sử dụng cả các biến độc lập liên tục và phân loại, đồng thời cung cấp khả năng ước lượng tác động định lượng của từng biến độc lập lên biến phụ thuộc. Hồi quy tuyến tính đa bội còn cho phép kiểm soát nhiều yếu tố cùng lúc và khám phá các mối tương tác giữa các biến, điều mà ANOVA không thể làm được một cách trực tiếp. Bên cạnh đó, cả hai mô hình đều dựa trên các giả định về tính độc lập, phân phối chuẩn và phương sai đồng nhất, nhưng hồi quy tuyến tính đa bội thường linh hoạt hơn trong việc xử lý các tình huống phức tạp hơn trong nghiên cứu. Do đó, việc lựa chọn giữa ANOVA và hồi quy tuyến tính đa bội phụ thuộc vào bản chất của dữ liệu và mục tiêu phân tích cụ thể của nghiên cứu.
